WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31346
Should not print javascript console messages to stdout
https://bugs.webkit.org/show_bug.cgi?id=31346
Summary
Should not print javascript console messages to stdout
Gustavo Noronha (kov)
Reported
2009-11-11 03:58:46 PST
Currently javascript console messages are printed to stdout using g_print. This is not a good idea. stderr should be used, at least.
Attachments
print console messages with g_warning
(1.67 KB, patch)
2009-11-11 04:02 PST
,
Gustavo Noronha (kov)
gustavo
: commit-queue-
Details
Formatted Diff
Diff
print console messages to stderr
(1.67 KB, patch)
2009-11-11 04:12 PST
,
Gustavo Noronha (kov)
zecke
: review+
gustavo
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gustavo Noronha (kov)
Comment 1
2009-11-11 04:02:57 PST
Created
attachment 42948
[details]
print console messages with g_warning This helps some tests fail from time to time. Javascript console messages show up on the test results.
Gustavo Noronha (kov)
Comment 2
2009-11-11 04:03:29 PST
(In reply to
comment #1
)
> This helps some tests fail from time to time. Javascript console messages show > up on the test results.
To be clear, 'This' here means the problem this patch fixes, not the fix =).
Gustavo Noronha (kov)
Comment 3
2009-11-11 04:12:06 PST
Created
attachment 42949
[details]
print console messages to stderr Use g_message instead of g_warning, following suggestion by Benjamin Otte.
Gustavo Noronha (kov)
Comment 4
2009-11-11 04:46:39 PST
Landed as
r50799
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug