Reviewed by Holger Freyther.

Should not print javascript console messages to stdout
https://bugs.webkit.org/show_bug.cgi?id=31346

* webkit/webkitwebview.cpp:
(webkit_web_view_real_console_message): Print console messages to
stderr instead, using the recommended method (a g_log variant).

Canonical link: https://commits.webkit.org/42228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50799 268f45cc-cd09-0410-ab3c-d52691b4dbfc