WebKit/gtk/webkit/webkitwebview.cpp
@@ -867,7 +867,7 @@ static gboolean webkit_web_view_real_script_prompt(WebKitWebView* webView, WebKi
 
 static gboolean webkit_web_view_real_console_message(WebKitWebView* webView, const gchar* message, unsigned int line, const gchar* sourceId)
 {
-    g_print("console message: %s @%d: %s\n", sourceId, line, message);
+    g_message("console message: %s @%d: %s\n", sourceId, line, message);
     return TRUE;
 }
 
